코드 및 주석 개선